--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
+    "jest": "^29.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mocha": "^10.0.0",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.19"
